--- a/Hw4-store/src/assets/helpers/_variables.scss
+++ b/Hw4-store/src/assets/helpers/_variables.scss
@@ -34,6 +34,7 @@ $grays: map-merge(
   $grays
 );
 
+//https://www.ebaomonthly.com/window/photo/lesson/colorList.htm
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
@@ -44,6 +45,7 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$appleGreen: #8CE600;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -61,13 +63,15 @@ $colors: map-merge(
     "cyan":       $cyan,
     "white":      $white,
     "gray":       $gray-600,
-    "gray-dark":  $gray-800
+    "gray-dark":  $gray-800,
+    "apple-green": $appleGreen
   ),
   $colors
 );
 
 $primary:       $gray-600;
 $secondary:     $pink;
+$tertiary:      $appleGreen;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -81,6 +85,7 @@ $theme-colors: map-merge(
   (
     "primary":    $primary,
     "secondary":  $secondary,
+    "tertiary":   $tertiary,
     "success":    $success,
     "info":       $info,
     "warning":    $warning,
