[HW4][add] add batch operation buttons arrray

--- a/Hw4-store/src/assets/helpers/_variables.scss
+++ b/Hw4-store/src/assets/helpers/_variables.scss
@@ -78,6 +78,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
+$disabled:      $gray-300;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -91,7 +92,8 @@ $theme-colors: map-merge(
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    "dark":       $dark
+    "dark":       $dark,
+    "disabled":     $disabled
   ),
   $theme-colors
 );
