--- a/Hw4-store/src/assets/all.scss
+++ b/Hw4-store/src/assets/all.scss
@@ -1,3 +1,11 @@
 @import "~bootstrap/scss/functions";
 @import "./helpers/_variables.scss";
 @import "~bootstrap/scss/bootstrap";
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+}
+
+.web-title {
+  font-family: "Kaushan Script", "Playfair Display", "Times New Roman", serif;
+}
