--- a/Hw4-store/src/assets/helpers/_variables.scss
+++ b/Hw4-store/src/assets/helpers/_variables.scss
@@ -45,7 +45,7 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
-$appleGreen: #8CE600;
+$amber:   #ffb502;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -64,14 +64,14 @@ $colors: map-merge(
     "white":      $white,
     "gray":       $gray-600,
     "gray-dark":  $gray-800,
-    "apple-green": $appleGreen
+    "$amber":     $amber
   ),
   $colors
 );
 
 $primary:       $gray-600;
 $secondary:     $pink;
-$tertiary:      $appleGreen;
+$tertiary:      $amber;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
